tests/fixtures/errors/type_mismatch.gbl

func main(): int {
    var x: int = "string"
    return 0
}
